--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <h1 class="display-3">Over PINGWING</h1>
                 </div>
                 <img class="position-absolute cloud4" src="./images/cloud4.png" alt="cloud4">
-                <div class="row row-overping-tekstblokken py-5 px-4 mt-5">
+                <div class="row row-overping-tekstblokken pt-5 px-4 mt-5">
                     <div class="col-md-4 team-focus-missie team mb-4">
                         <h4 class="mb-2">Team</h4>
                         <p>Een gedisciplineerd team van 5 studenten dat streeft naar een veilig gevoel voor kinderen en een geruststellend gevoel voor ouders.</p>
@@ -158,7 +158,7 @@
                         <p>Wij gaan ervoor om ouders een veilig gevoel te geven en kinderen gerust te stellen in hun omgeving.</p>
                     </div>
                 </div>
-                <div class="row row-overping-info pl-4 pt-5">
+                <div class="row row-overping-info pl-4 ">
                     <a href="./over_ons.html" class="btn btn-info custom-button">Meer info</a>
                 </div>
             </div>
