--- a/product.html
+++ b/product.html
@@ -383,10 +383,10 @@
       </svg>
     </div>
     <div class="row row-app">
-      <div class="col-md-4 scherm1">
+      <div class="col-lg-4 scherm1">
         <img src="./images/mockup_1.png" alt="scherm1 app">
       </div>
-      <div class="col-md-8 tekst-scherm1">
+      <div class="col-lg-8 tekst-scherm1">
         <h1 class="display-3 titel-app">MyPingwing</h1><br>
         <!--image bomen
         <div class="position-absolute bomen">
@@ -401,7 +401,7 @@
           Dit hele proces is anoniem en is versleuteld om je privacy te beschermen. 
           Het werkt heel efficiënt, en op bewegingsenergie. Dus je hoeft je geen zorgen te maken over je batterijduur of dataverbruik.</p>
         </div>
-        <div class="col-md-8 tekst-scherm2">
+        <div class="col-lg-8 tekst-scherm2">
           <p class="titelP">Functionaliteiten</p><br>
           <p class="tekstP">Het bandje zendt een beveiligd Bluetooth-signaal uit, dat kan worden opgepikt door de app. Vervolgens zie je op de kaart in de ‘MyPingwing’-app waar dat is.
             Dit hele proces is anoniem en is versleuteld om je privacy te beschermen. 
@@ -411,7 +411,7 @@
               <a href="https://play.google.com/store/apps"><img src="./images/andriod.png" alt=""></a>
             </div>
         </div>
-        <div class="col-md-4 scherm2">
+        <div class="col-lg-4 scherm2">
           <img src="./images/mockup_2.png" alt="scherm2 app">
         </div>
     </div>
