update alle files en winkelmandje teller :)

--- a/bestel.html
+++ b/bestel.html
@@ -48,6 +48,9 @@
                             <li class="nav-item align-self-center">
                                 <a class="nav-link px-md-4" href="./winkelmandje.html">
                                     <ion-icon class="" name="bag-outline"></ion-icon>
+                                    <div class="winkelmandje-aantal">
+                                        <span></span>
+                                    </div>
                                 </a>
                             </li>
                             <li class="nav-item align-self-center">
