--- a/over_ons.html
+++ b/over_ons.html
@@ -21,8 +21,7 @@
         <div class="container-fluid fullpage m-0 p-0">
             <nav class="navbar navbar-expand-md navbar-light">
                 <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="">
                         <div class="hamburger">
                             <div class="hamburgermenu"></div>
@@ -49,6 +48,9 @@
                         <li class="nav-item align-self-center">
                             <a class="nav-link px-md-4" href="./winkelmandje.html">
                                 <ion-icon class="" name="bag-outline"></ion-icon>
+                                <div class="winkelmandje-aantal">
+                                    <span></span>
+                                </div>
                             </a>
                         </li>
                         <li class="nav-item align-self-center">
