--- a/bestel.html
+++ b/bestel.html
@@ -166,7 +166,7 @@
                 <div id="popupcontentimg"></div>
                 <div id="popupcontentkleur" class="popupcontent-kleur"></div>
         </div>
-        <div id="popupcontentprijs" class="d-flex flex-column justify-content-center pr-5 popupcontent-prijs"></div>
+        <div id="popupcontentprijs" class="d-flex flex-column justify-content-center pr-0 pr-sm-5 popupcontent-prijs"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="custom-button-stroke" data-dismiss="modal">Verder winkelen</button>
