--- a/logIn.html
+++ b/logIn.html
@@ -74,11 +74,11 @@
                             <p>De combinatie van e-mailadres en wachtwoord is niet geldig.</p>
                         </div>
                         <div class="login-email pt-4">
-                            <label for="exampleInputPassword1">Email*</label>
+                            <label>Email*</label>
                             <input type="text" class="form-control" id="mailinput">
                         </div>
                         <div class="login-wachtwoord pt-4">
-                            <label for="exampleInputPassword1">Wachtwoord*</label>
+                            <label>Wachtwoord*</label>
                             <input type="password" class="form-control" id="wachtwoordinput">
                         </div>
                     </form>
@@ -96,32 +96,32 @@
                             <p class="alert alert-success">U bent succesvol geregistreerd!</p>
                         </div>
                         <div class="col-md-6 registreer-naam pt-4">
-                            <label class="invalidtxt" for="exampleInputPassword1">Naam*</label>
+                            <label class="invalidtxt">Naam*</label>
                             <input type="text" class="form-control validation" id="naamuser">
                         </div>
                         <div class="col-md-6 registreer-email pt-4">
-                            <label class="invalidtxt" for="exampleInputPassword1">Email*</label>
+                            <label class="invalidtxt">Email*</label>
                             <input type="text" class="form-control validationmail" id="mailuser">
                         </div>
                         <div class="col-md-6 registreer-wachtwoord pt-4">
-                            <label class="invalidtxt" for="exampleInputPassword1">Wachtwoord*</label>
+                            <label class="invalidtxt">Wachtwoord*</label>
                             <input type="password" class="form-control validation" id="wachtwoorduser">
                         </div>
                         <div class="col-md-6 registreer-telefoon pt-4">
-                            <label for="exampleInputPassword1">Telefoon</label>
+                            <label>Telefoon</label>
                             <input type="text" class="form-control" id="telefoonuser">
                         </div>
                         <div class="col-md-6 registreer-straat pt-4">
-                            <label for="exampleInputPassword1">Straat</label>
+                            <label>Straat</label>
                             <input type="text" class="form-control" id="straatuser">
                         </div>
                         <div class="col-md-6 registreer-stad pt-4">
-                            <label for="exampleInputPassword1">Stad</label>
+                            <label>Stad</label>
                             <input type="text" class="form-control" id="postcodeuser">
                         </div>
                         <div class="col-12 registreer-checkbox pt-4">
                             <input type="checkbox" id="akkoord-vinkje" name="akkoord" value="Akkoord">
-                            <label id="vinkje" for="Akkoord">Ik ga akkoord met de voorwaarden van Pingwing (*)</label><br>
+                            <label id="vinkje">Ik ga akkoord met de voorwaarden van Pingwing (*)</label><br>
                         </div>
                     </form>
                     <div class="registreer-button pt-4">
