--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -106,23 +106,12 @@
                               <p>Deze promocode is geldig!</p>
                             </div>
                         </div>
-                        <!--<div class="col-12 winkelmandje-betalen-aantal py-3">
-                            <p class="pb-1">69X</p>
-                            <div class="d-flex justify-content-between">
-                                <p>PingWing - Rood</p>
-                                <p>€69</p>
-                            </div>
-                        </div>-->
-                        <!--<div class="col-12 winkelmandje-betalen-foto py-3">
-                            <div class="foto">
-                            </div>
-                        </div>-->
                         <div class="col-12 winkelmandje-betalen-totaal py-3 d-flex justify-content-between" id="totaalprijs">
                             <p>Totaal:</p>
                             <p id="totaleaankoopprijs">€ 0</p>
                         </div>
                         <div class="col-12 winkelmandje-betalen-betalen">
-                            <a href="./betaald.html"><button class="btn btn-primary custom-button w-100">BETALEN</button></a>
+                            <a href="./betaald.html"><button class="btn btn-primary custom-button w-100" id="betaalbutton">BETALEN</button></a>
                         </div>
                     </div>
                 </div>
