--- a/bestel.html
+++ b/bestel.html
@@ -85,7 +85,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="20.5" height="23.5" viewBox="0 0 22.5 25.5">
                                 <path id="Icon_material-subdirectory-arrow-left" data-name="Icon material-subdirectory-arrow-left" d="M16.5,13.5l2.13,2.13L13.245,21H27V6h3V24H13.245l5.385,5.37L16.5,31.5l-9-9Z" transform="translate(-7.5 -6)"/>
                               </svg>
-                            <p>inruilen mogelijk</p>
+                            <p>Omruilen mogelijk</p>
                         </div> 
                         <hr>
                         <div class="main-container-col2-compinfo">
