all content fix

--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
         </nav>
         <main class="container pt-5">
             <div class="row">
+                <img class="wereldbol-contact" src="./images/wereldbol_contact.png" alt="wereldbol">
                 <div class="col-md-6 contact-form pb-md-5 mb-5">
                     <div class="contact-form-header py-5">
                         <h1>Contacteer ons</h1>
