--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -72,13 +72,13 @@
                                 <div class="col-md-6 winkelmandje-details-box-title-details">
                                     <h4 class="m-0">Details</h4>
                                 </div>
-                                <div class="col-md-2 winkelmandje-details-box-title-Aantal-prijs-totaal">
+                                <div class="col-md-2 winkelmandje-details-box-title-Aantal-prijs-totaal pl-0">
                                     <h4 class="m-0">Aantal</h4>
                                 </div>
-                                <div class="col-md-2 winkelmandje-details-box-title-Aantal-prijs-totaal">
+                                <div class="col-md-2 winkelmandje-details-box-title-Aantal-prijs-totaal pl-0">
                                     <h4 class="m-0">Prijs</h4>
                                 </div>
-                                <div class="col-md-2 winkelmandje-details-box-title-Aantal-prijs-totaal">
+                                <div class="col-md-2 winkelmandje-details-box-title-Aantal-prijs-totaal pl-0">
                                     <h4 class="m-0">Totaal</h4>
                                 </div>
                             </div>
