--- a/product.html
+++ b/product.html
@@ -301,12 +301,12 @@
     <table class="table table-bordered table-tecs">
       <tbody>
         <tr>
-          <th class="Tlinks" scope="col1 row1">groot</th>
-          <td class="Trechts" scope="col2 row1">100 x 100 x 100mm</td>
+          <th class="Tlinks" scope="col1 row1">display</th>
+          <td class="Trechts" scope="col2 row1">20 x 30 mm</td>
         </tr>
         <tr>
           <th class="Tlinks" scope="col1 row2">gewicht</th>
-          <td class="Trechts" scope="col2 row2">150 gram</td>
+          <td class="Trechts" scope="col2 row2">35 gram</td>
         </tr>
         <tr>
           <th class="Tlinks" scope="col1 row3">app-connectie</th>
