--- a/over_ons.html
+++ b/over_ons.html
@@ -121,7 +121,7 @@
                             </p>
                         </div>
                         <div
-                            class="col-md-6 py-md-5 pt-5 d-flex justify-content-lg-end justify-content-start column-picture">
+                            class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center justify-content-lg-end column-picture">
                             <img src="./images/KaiHoofd.png" alt="Kai">
                         </div>
                     </div>
